# ansible_solace_container

./: CHANGELOG.md  README.md  ha_docker_scripts.py  pubsub-ha.yml  pubsub-sdkperf.yml  pubsub-single.yml  pyproject.toml  sdkperf.yml  todo.txt
roles/container/: docker-create.sh.j2
roles/container/tasks/: main.yml
roles/docker/tasks/: centos.yml  main.yml  ubuntu.yml
roles/ha/tasks/: main.yml  primary.yml
roles/ha/templates/: assert-leader.sh  assert-primary.j2.sh  ha-create.sh.j2
roles/image/tasks/: main.yml
roles/sdkperf/tasks/: main.yml
roles/single/: docker-create.sh.j2
roles/single/tasks/: main.yml
roles/vmr/files/: daemon.json
roles/vmr/tasks/: main.yml
