[tool.poetry]
name = "j2_docker"
version = "0.1.0"
description = ""
authors = ["flyisland <flyisland@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Jinja2 = "^3.0.3"
ansible = "^6.6.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.1.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"